# ML-Enhanced-DCF-with-Risk-Analytics

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
configs/: settings.py
dashboard/: app.py
dashboard/components/: cards.py  charts.py
dashboard/pages/: 01_Executive_Summary.py  02_Company_Explorer.py  03_Financial_Statements.py  04_Forecasting_Center.py  05_DCF_Lab.py  06_Risk_Analytics.py  07_Explainability_Hub.py  08_Report_Generator.py
dashboard/styles/: main.css
src/api/: main.py
src/data/adapters/: yfinance_adapter.py
src/data/repositories/: financial_repository.py
src/data/schemas/: financial_schemas.py
src/education/: concepts.py
src/explainability/: lime_explainer.py  shap_explainer.py
src/finance/engines/: comps_engine.py  dcf_engine.py  fcff_engine.py  wacc_engine.py
src/forecasting/: feature_engineering.py
src/forecasting/models/: revenue_forecaster.py  valuation_classifier.py
src/simulation/: monte_carlo.py
src/utils/: helpers.py  logging.py
src/valuation/: orchestrator.py
tests/integration/: test_pipeline.py
tests/unit/: test_fcff_engine.py  test_valuation_engines.py
